--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@nuxt/content": "^2.8.5",
     "nuxt": "^3.8.0"
+  },
+  "dependencies": {
+    "fuse": "^0.4.0"
   }
 }
